corrected code for downloading data with date range function

--- a/apps/templates/home/tables.html
+++ b/apps/templates/home/tables.html
@@ -264,7 +264,7 @@
 </form>
          </div>
         <!-- Card Footer with Pagination -->
-    <div class="card-footer py-4 bg-light">
+    <div class="card-footer py-4 bg-white">
       <div class="row align-items-center">
         <!-- Go To Page Form -->
         <div class="col-md-4">
